@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.wso2.carbon.apimgt</groupId>
         <artifactId>apimgt</artifactId>
-        <version>9.32.160-SNAPSHOT</version>
+        <version>9.33.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -255,7 +255,7 @@
         </dependency>
         <dependency>
             <groupId>org.wso2.orbit.io.swagger</groupId>
-            <artifactId>swagger-inflector-oas3</artifactId>
+            <artifactId>swagger-inflector-oas3-jdk21</artifactId>
         </dependency>
         <dependency>
             <groupId>org.wso2.orbit.io.swagger.v3</groupId>
@@ -517,6 +517,8 @@
                         --add-opens java.base/sun.security.x509=ALL-UNNAMED
                         --add-opens java.base/java.security.cert=ALL-UNNAMED
                         --add-exports java.base/sun.security.x509=ALL-UNNAMED
+                        --add-opens java.base/java.util.regex=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
                     </argLine>
                     <systemProperties>
                         <property>
@@ -584,7 +586,6 @@
                             javax.servlet;version="${javax.servlet.imp.pkg.version}",
                             javax.servlet.http;version="${javax.servlet.imp.pkg.version}",
                             javax.servlet.resources;version="${javax.servlet.imp.pkg.version}",
-                            org.eclipse.equinox.http.helper,
                             com.google.gson,
                             software.amazon.awssdk.services.sts.*; version="${org.wso2.orbit.com.amazonaws.version.range}"; resolution:=optional,
                             software.amazon.awssdk.services.lambda.*; version="${org.wso2.orbit.com.amazonaws.version.range}"; resolution:=optional,
@@ -654,6 +655,12 @@
                             *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.apimgt.impl.APIManagerConfigurationService,
+                            osgi.service;objectClass=org.wso2.carbon.apimgt.impl.jwt.JWTValidationService,
+                            osgi.service;objectClass=org.wso2.carbon.apimgt.impl.keymgt.KeyManagerDataService,
+                            osgi.service;objectClass=org.wso2.carbon.apimgt.impl.keymgt.KeyManagerConfigurationService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
